tests/invalid/ListUpdate_Invalid_1.whiley
function f([int] xs) -> [int]:
    xs[0] = 1
    return xs
